CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)


SET (MODULE_INCLUDE_DIRS CACHE INTERNAL "The list of include folders to search for the io module.")
SET (MODULE_LIBS CACHE INTERNAL "The list of libraries that the io module should link against.")

SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR}/include)
MESSAGE(${MODULE_INCLUDE_DIRS})

SET (MODULE_LIBS ${MODULE_LIBS} gmConfig)

FIND_PACKAGE(TinyXML2 REQUIRED)
SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${TinyXML2_INCLUDE_DIRS})
SET (MODULE_LIBS ${MODULE_LIBS} ${TinyXML2_LIBRARIES})


CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/include/gmIO/config_cmake.hh
  ${CMAKE_CURRENT_BINARY_DIR}/include/gmIO/config.hh)


ADD_LIBRARY(gmIO SHARED
  src/Console.cpp
  src/MessageSink.cpp
  src/OStreamMessageSink.cpp
  )

TARGET_INCLUDE_DIRECTORIES(gmIO PUBLIC ${MODULE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(gmIO ${MODULE_LIBS})

SET_PROPERTY(TARGET gmIO PROPERTY CXX_STANDARD 14)
