CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
CMAKE_POLICY(VERSION 3.13)


SET (MODULE_LIBS CACHE INTERNAL "The list of libraries that the misc module should link against.")


LIST (APPEND MODULE_LIBS gmCore)

FIND_PACKAGE (Eigen3 QUIET NO_MODULE)
IF (Eigen3_FOUND)
  SET(HAVE_Eigen3 1)
  OPTION(gramods_ENABLE_Eigen3 "Enable functionality that requires Eigen3" ON)
  IF (gramods_ENABLE_Eigen3)
    LIST (APPEND MODULE_LIBS Eigen3::Eigen)
  ENDIF()
ENDIF()


CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/src/config_cmake.hh
  ${CMAKE_CURRENT_BINARY_DIR}/include/gmMisc/config.hh)


INCLUDE(GetSourcesAndHeaders)
get_sources_and_headers()

SOURCE_GROUP("headers" FILES ${HEADERS_ABSOLUTE})
SOURCE_GROUP("sources" FILES ${SOURCES})

ADD_LIBRARY(gmMisc SHARED)

TARGET_INCLUDE_DIRECTORIES(gmMisc
  PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
  $<INSTALL_INTERFACE:include>)
TARGET_SOURCES(gmMisc
  PRIVATE ${SOURCES}
  PUBLIC ${HEADERS_MAGIC}
  )
TARGET_LINK_LIBRARIES(gmMisc ${MODULE_LIBS})

SET_PROPERTY(TARGET gmMisc PROPERTY CXX_STANDARD 14)
SET_PROPERTY(TARGET gmMisc PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
SET_PROPERTY(TARGET gmMisc PROPERTY PUBLIC_HEADER ${HEADERS_MAGIC})

INSTALL(TARGETS gmMisc
  EXPORT Gramods-gmMisc-targets
  ARCHIVE LIBRARY RUNTIME
  PUBLIC_HEADER DESTINATION include/gmMisc)
INSTALL(EXPORT Gramods-gmMisc-targets
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/gramods/cmake)

INCLUDE(InstallDependencies)
install_library_dependencies($<TARGET_FILE:gmMisc>)
